// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ThemeSwitcher renders correctly when theme is toggled 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--foreground);
  color: var(--background);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 50px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  opacity: 1;
  padding: 0;
  position: fixed;
  right: 50px;
  top: 0;
  -webkit-transition: background-color .333s,color .333s,opacity .333s;
  transition: background-color .333s,color .333s,opacity .333s;
  width: 50px;
  z-index: 8;
}

.emotion-0:hover {
  background: var(--background);
  color: var(--foreground);
}

.emotion-0.fullScreen {
  opacity: 0.65;
}

.emotion-0 svg {
  fill: currentColor;
  height: 40px;
  width: 40px;
}

<div>
  <button
    aria-label="Switch theme"
    class="emotion-0"
    type="button"
  >
    <svg
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M9 21c0 .6.5 1 1 1h4c.6 0 1-.5 1-1v-1H9v1zm3-19a7 7 0 00-4 12.7V17c0 .6.5 1 1 1h6c.6 0 1-.5 1-1v-2.3A7 7 0 0012 2zm2.9 11.1l-.9.6V16h-4v-2.3l-.8-.6a5 5 0 115.7 0z"
      />
    </svg>
    <div
      class="mock-helmet"
    >
      <div
        data-content="#000000"
        data-helmet-tag="meta"
        data-name="theme-color"
      />
    </div>
  </button>
</div>
`;

exports[`ThemeSwitcher renders correctly when theme is toggled 2`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--foreground);
  color: var(--background);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 50px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  opacity: 1;
  padding: 0;
  position: fixed;
  right: 50px;
  top: 0;
  -webkit-transition: background-color .333s,color .333s,opacity .333s;
  transition: background-color .333s,color .333s,opacity .333s;
  width: 50px;
  z-index: 8;
}

.emotion-0:hover {
  background: var(--background);
  color: var(--foreground);
}

.emotion-0.fullScreen {
  opacity: 0.65;
}

.emotion-0 svg {
  fill: currentColor;
  height: 40px;
  width: 40px;
}

<div>
  <button
    aria-label="Switch theme"
    class="emotion-0"
    type="button"
  >
    <svg
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M9 21c0 .5.4 1 1 1h4c.6 0 1-.5 1-1v-1H9v1zm3-19a7 7 0 00-4 12.7V17c0 .5.4 1 1 1h6c.6 0 1-.5 1-1v-2.3A7 7 0 0012 2z"
      />
    </svg>
    <div
      class="mock-helmet"
    >
      <div
        data-content="#ffffff"
        data-helmet-tag="meta"
        data-name="theme-color"
      />
    </div>
  </button>
</div>
`;

exports[`ThemeSwitcher renders correctly with all props 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--foreground);
  color: var(--background);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 50px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  opacity: 1;
  padding: 0;
  position: fixed;
  right: 50px;
  top: 0;
  -webkit-transition: background-color .333s,color .333s,opacity .333s;
  transition: background-color .333s,color .333s,opacity .333s;
  width: 50px;
  z-index: 8;
}

.emotion-0:hover {
  background: var(--background);
  color: var(--foreground);
}

.emotion-0.fullScreen {
  opacity: 0.65;
}

.emotion-0 svg {
  fill: currentColor;
  height: 40px;
  width: 40px;
}

<div>
  <button
    aria-label="Switch theme"
    class="fullScreen emotion-0"
    type="button"
  >
    <svg
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M9 21c0 .6.5 1 1 1h4c.6 0 1-.5 1-1v-1H9v1zm3-19a7 7 0 00-4 12.7V17c0 .6.5 1 1 1h6c.6 0 1-.5 1-1v-2.3A7 7 0 0012 2zm2.9 11.1l-.9.6V16h-4v-2.3l-.8-.6a5 5 0 115.7 0z"
      />
    </svg>
    <div
      class="mock-helmet"
    >
      <div
        data-content="#000000"
        data-helmet-tag="meta"
        data-name="theme-color"
      />
    </div>
  </button>
</div>
`;

exports[`ThemeSwitcher renders correctly with minimum props 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--foreground);
  color: var(--background);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 50px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  opacity: 1;
  padding: 0;
  position: fixed;
  right: 50px;
  top: 0;
  -webkit-transition: background-color .333s,color .333s,opacity .333s;
  transition: background-color .333s,color .333s,opacity .333s;
  width: 50px;
  z-index: 8;
}

.emotion-0:hover {
  background: var(--background);
  color: var(--foreground);
}

.emotion-0.fullScreen {
  opacity: 0.65;
}

.emotion-0 svg {
  fill: currentColor;
  height: 40px;
  width: 40px;
}

<div>
  <button
    aria-label="Switch theme"
    class="emotion-0"
    type="button"
  >
    <svg
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M9 21c0 .6.5 1 1 1h4c.6 0 1-.5 1-1v-1H9v1zm3-19a7 7 0 00-4 12.7V17c0 .6.5 1 1 1h6c.6 0 1-.5 1-1v-2.3A7 7 0 0012 2zm2.9 11.1l-.9.6V16h-4v-2.3l-.8-.6a5 5 0 115.7 0z"
      />
    </svg>
    <div
      class="mock-helmet"
    >
      <div
        data-content="#000000"
        data-helmet-tag="meta"
        data-name="theme-color"
      />
    </div>
  </button>
</div>
`;
